--- a/.cicd/k8s/values_dev.yaml
+++ b/.cicd/k8s/values_dev.yaml
@@ -7,3 +7,13 @@ image:
   name: i27anilb3/eureka
   tag: ${GIT_COMMIT}
 targetPort: 8761
+---
+labelname: i27-eureka1
+deployname: i27-eureka-dev1
+namespace: i27-dev-ns
+replicas:
+  default: 1
+image:
+  name: i27anilb3/eureka
+  tag: ${GIT_COMMIT}
+targetPort: 8761
